<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
        android:layout_marginTop="40dp"
        android:background="@mipmap/dialog_header"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <ImageView
            android:id="@+id/ImageView_Contact_Eidt_Dailog_Eidt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@mipmap/ic_edit"/>
        <ImageView
            android:layout_alignParentEnd="true"
            android:background="@mipmap/ic_close"
            android:padding="8dp"
            android:id="@+id/ImageView_Contact_Eidt_Dailog_Close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/Dialog_Contact_Eidt_Name"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@mipmap/line"
            android:text="@string/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        </RelativeLayout>
        <LinearLayout
            android:background="@mipmap/gray_bg"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="240dp">
    <RelativeLayout
            android:paddingTop="10dp"
       style="@style/MyEditText"

       >
        <TextView
            android:text="@string/phone01"
            style="@style/MyText01" />

        <TextView
            android:id="@+id/Dialog_Contact_Eidt_Phone"
            style="@style/MyText02"
            android:text="15159344142"
            />
        <ImageView
            style="@style/MyImage" />
        </RelativeLayout>
    <RelativeLayout
        android:paddingTop="10dp"
        style="@style/MyEditText">
        <TextView
            android:text="@string/emIL01"
            style="@style/MyText01" />

        <TextView
            android:id="@+id/Dialog_Contact_Eidt_Email"
            style="@style/MyText02"
            android:text="@string/Email01"
            />
        <ImageView
            style="@style/MyImage" />
    </RelativeLayout>
    <RelativeLayout
        style="@style/MyEditText"
        android:paddingTop="10dp">
        <TextView
            android:text="@string/Address01"
            style="@style/MyText01" />

        <TextView
            android:id="@+id/Dialog_Contact_Eidt_Address"
            style="@style/MyText02"
            android:text="@string/Address02"
            />
        <ImageView
            style="@style/MyImage" />
    </RelativeLayout>


    </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/Dialog_Contact_Eidt_Photo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
